Version 0.8.2 Incrimental update to work on fix for display on mobile devices.

--- a/css/styles.css
+++ b/css/styles.css
@@ -507,6 +507,13 @@ body {
 @media only screen and (hover: none) {
     body {
         min-height: calc(var(--vh, 1vh)*100);
+        max-height: calc(var(--vh, 1vh)*100);
+    }
+    .portfolioPage {
+        max-height: calc(var(--vh, 1vh)*100);
+    }
+    #image-details {
+        height: calc(var(--vh, 1vh)*100);
     }
 }
 
